--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ControlStylesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ControlStylesDictionary.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">    
-    <Style TargetType="{x:Type Hyperlink}"
-           x:Key="HyperlinkStyle">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    
+    <!--Hyperlink-->
+    <Style x:Key="HyperlinkStyle" TargetType="{x:Type Hyperlink}">
         <Setter Property="TextDecorations" Value="{x:Null}"/>
         <Setter Property="Foreground" Value="#FF0083BF"/>
         <Setter Property="FontWeight" Value="Bold"/>
@@ -10,5 +11,19 @@
                 <Setter Property="TextDecorations" Value="Underline"/>
             </Trigger>
         </Style.Triggers>
-    </Style>    
+    </Style>
+
+    <!--Image button-->
+    <Style x:Key="ImageButtonStyle" TargetType="{x:Type ButtonBase}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type ButtonBase}">
+                    <Border Width="{TemplateBinding Width}" 
+                            Height="{TemplateBinding Height}"
+                            Background="{TemplateBinding Background}"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+
+    </Style>
 </ResourceDictionary>
