--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ControlStylesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/ControlStylesDictionary.xaml
@@ -15,12 +15,26 @@
 
     <!--Image button-->
     <Style x:Key="ImageButtonStyle" TargetType="{x:Type ButtonBase}">
+        <Setter Property="Margin" Value="0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ButtonBase}">
-                    <Border Width="{TemplateBinding Width}" 
+                    <Border x:Name="brdImage"
+                            Width="{TemplateBinding Width}" 
                             Height="{TemplateBinding Height}"
-                            Background="{TemplateBinding Background}"/>
+                            Background="{TemplateBinding Background}"/>                        
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="brdImage" Property="Effect">
+                                <Setter.Value>
+                                    <DropShadowEffect/>
+                                </Setter.Value>
+                            </Setter>
+                        </Trigger>
+                        <Trigger Property="IsEnabled" Value="False">
+                            <Setter TargetName="brdImage" Property="Opacity" Value="0.3"/>                                
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
