--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -120,7 +120,9 @@
             <Trigger SourceName="brdMain" Property="IsMouseOver" Value="True">
                 <Setter TargetName="pnlButtons" Property="Visibility" Value="Visible"/>
             </Trigger>
-
+            <DataTrigger Binding="{Binding IsCurrent}" Value="True">
+                <Setter TargetName="brdMain" Property="Background" Value="Yellow"/>                
+            </DataTrigger>
         </DataTemplate.Triggers>
     </DataTemplate>
 
