--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -21,30 +21,31 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
                     <TextBlock Text="{Binding Name}"
-                                               FontSize="16"
-                                               FontWeight="Bold"
-                                               Margin="6"/>
+                               FontSize="16"
+                               FontWeight="Bold"
+                               Margin="6"                               
+                               TextWrapping="Wrap"/>
 
                     <Button x:Name="btnRemove"
-                                            Command="{Binding RemoveCommand}"                                                                               
-                                            MinWidth="16"
-                                            VerticalAlignment="Center"
-                                            HorizontalAlignment="Right"
-                                            Opacity="0.3"
-                                            Margin="3">
+                            Command="{Binding RemoveCommand}"                                                                               
+                            MinWidth="16"
+                            VerticalAlignment="Top"
+                            HorizontalAlignment="Right"
+                            Opacity="0.3"
+                            Margin="3, 8">
                         <Button.Template>
                             <ControlTemplate>
                                 <Border Background="Transparent">
                                     <Path Stretch="Fill" 
-                                                          StrokeThickness="0.5" 
-                                                          Stroke="#FF333333" 
-                                                          Fill="#FF969696" 
-                                                          Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
-                                                          HorizontalAlignment="Stretch" 
-                                                          VerticalAlignment="Stretch"
-                                                          Height="10"
-                                                          Width="10"
-                                                          Margin="5, 0"/>
+                                          StrokeThickness="0.5" 
+                                          Stroke="#FF333333" 
+                                          Fill="#FF969696" 
+                                          Data="F1 M 0,1.3333L 1.33333,0L 4,2.6666L 6.6666,0 8,1.3333L 5.3333,4L 8,6.6666L 6.6666,8L 4,5.3333L 1.3333,8L 0,6.6666L 2.6666,4L 0,1.3333 Z " 
+                                          HorizontalAlignment="Stretch" 
+                                          VerticalAlignment="Stretch"
+                                          Height="10"
+                                          Width="10"
+                                          Margin="5, 0"/>
                                 </Border>
                             </ControlTemplate>
                         </Button.Template>
@@ -116,32 +117,44 @@
 
         <!--Search filters and sorting-->
         <Grid Grid.Row="1"
-              TextBlock.FontSize="14">
-            <StackPanel Margin="20, 0">
-                <StackPanel Margin="0, 10">
-                    <TextBlock Text="Sort by:"
+              TextBlock.FontSize="14"
+              Margin="20, 0, 4, 0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <Grid Margin="0, 10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <TextBlock Text="Sort by:"
                            Foreground="Gray"/>
-                    <TextBlock Margin="0, 1">
-                        <Hyperlink Style="{StaticResource HyperlinkStyle}"
-                                   Command="{Binding SortByNameCommand}">
-                            <TextBlock Text="Name"/>
-                        </Hyperlink>
-                    </TextBlock>
-                    <TextBlock>
-                        <Hyperlink Style="{StaticResource HyperlinkStyle}"
-                                   Command="{Binding SortByDescendantsCountCommand}">
-                            <TextBlock Text="Descendants count"/>
-                        </Hyperlink>
-                    </TextBlock>
-                </StackPanel>
-                <StackPanel Margin="0, 10"
-                            TextBlock.FontFamily="Verdana">
-                    <CheckBox Content=" Classes" IsChecked="{Binding ShowClasses}" Margin="0, 1"/>
-                    <CheckBox Content=" Interfaces" IsChecked="{Binding ShowInterfaces}" Margin="0, 1"/>
-                    <CheckBox Content=" Value types" IsChecked="{Binding ShowStructures}" Margin="0, 1"/>                    
-                    <CheckBox Content=" Enums" IsChecked="{Binding ShowEnums}" Margin="0, 1" />
-                </StackPanel>                
+                <TextBlock Margin="0, 1"
+                           Grid.Row="1">
+                    <Hyperlink Style="{StaticResource HyperlinkStyle}"
+                               Command="{Binding SortByNameCommand}">
+                        <TextBlock Text="Name"/>
+                    </Hyperlink>
+                </TextBlock>
+                <TextBlock Grid.Row="2">
+                    <Hyperlink Style="{StaticResource HyperlinkStyle}"
+                               Command="{Binding SortByDescendantsCountCommand}">
+                        <TextBlock Text="Descendants count"
+                                   TextWrapping="Wrap"/>
+                    </Hyperlink>
+                </TextBlock>
+            </Grid>
+            <StackPanel Margin="0, 10"
+                        TextBlock.FontFamily="Verdana"
+                        Grid.Row="1">
+                <CheckBox Content=" Classes" IsChecked="{Binding ShowClasses}" Margin="0, 1"/>
+                <CheckBox Content=" Interfaces" IsChecked="{Binding ShowInterfaces}" Margin="0, 1"/>
+                <CheckBox Content=" Value types" IsChecked="{Binding ShowStructures}" Margin="0, 1"/>
+                <CheckBox Content=" Enums" IsChecked="{Binding ShowEnums}" Margin="0, 1" />
             </StackPanel>
+
         </Grid>
 
         <!--Search results-->
@@ -176,7 +189,8 @@
                                            FontSize="16"
                                            FontWeight="Bold"
                                            Margin="9, 6"
-                                           HorizontalAlignment="Left">
+                                           HorizontalAlignment="Left"
+                                           TextWrapping="Wrap">
                                     <TextBlock Text="{Binding Name}"/>
                                     <TextBlock x:Name="txtBaseType">
                                         <Run Text=" : "/>
