Assembly Browser: Changed type filters, small UI tweaks

--- a/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Dictionaries/DataTemplatesDictionary.xaml
@@ -119,6 +119,7 @@
             </DataTrigger>
             <Trigger SourceName="brdMain" Property="IsMouseOver" Value="True">
                 <Setter TargetName="pnlButtons" Property="Visibility" Value="Visible"/>
+                <Setter TargetName="brdMain" Property="Background" Value="White"/>
             </Trigger>
             <DataTrigger Binding="{Binding IsCurrent}" Value="True">
                 <Setter TargetName="brdMain" Property="Background" Value="Yellow"/>                
