--- a/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
+++ b/sources/ILSpyVisualizer/AssemblyBrowser/Screens/SearchScreenView.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:UserControls="clr-namespace:ILSpyVisualizer.AssemblyBrowser.UserControls" mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -14,25 +13,30 @@
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
             <DataTemplate x:Key="AssemblyTemplate">
-                <Grid Background="#DBE1FF"
+                <Grid Background="#B6E587"
                               Margin="5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
                         <RowDefinition/>
                     </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition Width="Auto"/>
+                    </Grid.ColumnDefinitions>
                     <TextBlock Text="{Binding Name}"
                                FontSize="16"
                                FontWeight="Bold"
-                               Margin="6"                               
+                               Margin="6, 6, 2, 3"                               
                                TextWrapping="Wrap"/>
 
                     <Button x:Name="btnRemove"
+                            Grid.Column="1"
                             Command="{Binding RemoveCommand}"                                                                               
                             MinWidth="16"
                             VerticalAlignment="Top"
                             HorizontalAlignment="Right"
                             Opacity="0.3"
-                            Margin="3, 8">
+                            Margin="3, 8, 3, 0">
                         <Button.Template>
                             <ControlTemplate>
                                 <Border Background="Transparent">
@@ -52,13 +56,14 @@
                     </Button>
 
                     <StackPanel Grid.Row="1"
+                                Grid.ColumnSpan="2"
                                 Margin="8, 0, 8, 3">
                         <TextBlock Margin="0, 3">
-                            <Run Text="Exported types: "/>
+                            <Run Text="Exported types: " FontStyle="Italic"/>
                             <TextBlock Text="{Binding ExportedTypesCount}"/>
                         </TextBlock>
                         <TextBlock Margin="0, 3">
-                            <Run Text="Internal types: "/>
+                            <Run Text="Internal types: " FontStyle="Italic"/>
                             <TextBlock Text="{Binding InternalTypesCount}"/>
                         </TextBlock>
                     </StackPanel>
@@ -115,47 +120,17 @@
             </TextBox>
         </Grid>
 
-        <!--Search filters and sorting-->
-        <Grid Grid.Row="1"
-              TextBlock.FontSize="14"
-              Margin="20, 0, 4, 0">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-            </Grid.RowDefinitions>
-            <Grid Margin="0, 10">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                </Grid.RowDefinitions>
-                <TextBlock Text="Sort by:"
-                           Foreground="Gray"/>
-                <TextBlock Margin="0, 1"
-                           Grid.Row="1">
-                    <Hyperlink Style="{StaticResource HyperlinkStyle}"
-                               Command="{Binding SortByNameCommand}">
-                        <TextBlock Text="Name"/>
-                    </Hyperlink>
-                </TextBlock>
-                <TextBlock Grid.Row="2">
-                    <Hyperlink Style="{StaticResource HyperlinkStyle}"
-                               Command="{Binding SortByDescendantsCountCommand}">
-                        <TextBlock Text="Descendants count"
-                                   TextWrapping="Wrap"/>
-                    </Hyperlink>
-                </TextBlock>
-            </Grid>
-            <StackPanel Margin="0, 10"
-                        TextBlock.FontFamily="Verdana"
-                        Grid.Row="1">
-                <CheckBox Content=" Classes" IsChecked="{Binding ShowClasses}" Margin="0, 1"/>
-                <CheckBox Content=" Interfaces" IsChecked="{Binding ShowInterfaces}" Margin="0, 1"/>
-                <CheckBox Content=" Value types" IsChecked="{Binding ShowStructures}" Margin="0, 1"/>
-                <CheckBox Content=" Enums" IsChecked="{Binding ShowEnums}" Margin="0, 1" />
-            </StackPanel>
-
-        </Grid>
+        <ItemsControl ItemsSource="{Binding SearchControlGroups}"
+                      Grid.Row="1"
+                      Margin="20, 0, 4, 0">
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <UserControls:CommandsGroupView Commands="{Binding Commands}"
+                                                    Header="{Binding Header}"
+                                                    Margin="0, 3"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
 
         <!--Search results-->
         <ItemsControl ItemsSource="{Binding SearchResults}"
@@ -175,7 +150,8 @@
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="5">
-                        <Border Style="{StaticResource BorderStyle}">
+                        <Border Style="{StaticResource BorderStyle}"
+                                x:Name="brdMain">
                             <Grid>
                                 <Grid.RowDefinitions>
                                     <RowDefinition/>
@@ -191,7 +167,7 @@
                                            Margin="9, 6"
                                            HorizontalAlignment="Left"
                                            TextWrapping="Wrap">
-                                    <TextBlock Text="{Binding Name}"/>
+                                    <TextBlock Text="{Binding Name}" TextWrapping="Wrap"/>
                                     <TextBlock x:Name="txtBaseType">
                                         <Run Text=" : "/>
                                         <TextBlock Text="{Binding BaseTypeName}"/>
@@ -201,35 +177,36 @@
                                 <StackPanel Orientation="Horizontal"
                                                 Grid.Row="1"
                                                 Margin="11, 4">
-                                    <TextBlock Text="Direct descendants:"/>
+                                    <TextBlock Text="Direct descendants:" FontStyle="Italic"/>
                                     <TextBlock Text="{Binding DirectDescendantsCount}"                                                   
                                                    FontWeight="Bold"
                                                Margin="4, 0, 6, 0"/>
-                                    <TextBlock Text="Total descendants:"/>
+                                    <TextBlock Text="Total descendants:" FontStyle="Italic"/>
                                     <TextBlock Text="{Binding DescendantsCount}"                                                   
                                                    FontWeight="Bold"
                                                Margin="4, 0, 6, 0"/>
                                 </StackPanel>
-
-                                <TextBlock VerticalAlignment="Center"
-                                           Margin="8, 2, 8, 0"
-                                           Grid.Column="1"                                           
-                                           Visibility="{Binding ShowVisualizeCommand, Converter={StaticResource BooleanToVisibilityConverter}}">
-                                    <Hyperlink Command="{Binding VisualizeCommand}"
-                                               Style="{StaticResource HyperlinkStyle}">
-                                        <TextBlock Text="Visualize"/>
-                                    </Hyperlink>
-                                </TextBlock>
-                                <TextBlock VerticalAlignment="Center"
-                                           Margin="8, 0, 8, 2"
-                                           Grid.Column="1"    
-                                           Grid.Row="1">
-                                    <Hyperlink Command="{Binding NavigateCommand}"
-                                               Style="{StaticResource HyperlinkStyle}">
-                                        <TextBlock Text="Navigate"/>
-                                    </Hyperlink>
-                                </TextBlock>
-                                
+                                <StackPanel Grid.Column="1"
+                                            Grid.RowSpan="2"
+                                            VerticalAlignment="Center">
+                                    <TextBlock VerticalAlignment="Center"
+                                               Margin="8, 6, 10, 5"
+                                                                                      
+                                               Visibility="{Binding ShowVisualizeCommand, Converter={StaticResource BooleanToVisibilityConverter}}">
+                                        <Hyperlink Command="{Binding VisualizeCommand}"
+                                                   Style="{StaticResource HyperlinkStyle}">
+                                            <TextBlock Text="Visualize"/>
+                                        </Hyperlink>
+                                    </TextBlock>
+                                    <TextBlock VerticalAlignment="Center"
+                                               Margin="8, 5, 10, 6"                                               
+                                               >
+                                        <Hyperlink Command="{Binding NavigateCommand}"
+                                                   Style="{StaticResource HyperlinkStyle}">
+                                            <TextBlock Text="Navigate"/>
+                                        </Hyperlink>
+                                    </TextBlock>
+                                </StackPanel>                                
                             </Grid>
                         </Border>
                         <Border Style="{StaticResource BorderStyle}">
@@ -242,17 +219,38 @@
                         <DataTrigger Binding="{Binding HasBaseType}" Value="False">
                             <Setter TargetName="txtBaseType" Property="Visibility" Value="Collapsed"/>
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding IsInternal}" Value="True">
+                            <Setter TargetName="brdMain" Property="Background" Value="#F2F2F2"/>
+                        </DataTrigger>
                     </DataTemplate.Triggers>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
 
         <!--Assemblies-->
-        <ItemsControl Grid.Column="2"
-                          Grid.Row="1"
-                          ItemsSource="{Binding Assemblies}"
-                          ItemTemplate="{StaticResource AssemblyTemplate}"/>
-
-
+        <ScrollViewer Grid.Column="2"
+                      Grid.Row="1"
+                      VerticalScrollBarVisibility="Auto">
+            <ItemsControl 
+                      ItemsSource="{Binding Assemblies}"
+                      ItemTemplate="{StaticResource AssemblyTemplate}"/>
+        </ScrollViewer>
+        
+        <!--Home page-->
+        <Border Margin="0, 6"
+                CornerRadius="6"
+                Background="White"
+                Grid.Row="1"
+                Grid.Column="2"
+                VerticalAlignment="Bottom"
+                HorizontalAlignment="Center">
+            <TextBlock FontSize="12"
+                       Margin="4, 2">
+                <Hyperlink Style="{StaticResource HyperlinkStyle}"
+                           Command="{Binding NavigateToHomePageCommand}">
+                    <TextBlock Text="Home"/>
+                </Hyperlink>
+            </TextBlock>
+        </Border>
     </Grid>
 </UserControl>
